# intifada

./: CMakeLists.txt  README
inc/: command_line_argument.hpp  services.hpp  services_main.hpp  servicess_http.hpp
src/: command_line_argument.cpp  services.cpp  services_main.cpp  servicess_http.cpp
test/: CMakeLists.txt
test/inc/: command_line_argument_test.hpp
test/src/: command_line_argument_test.cpp
